@@ -1,5 +1,9 @@
 2006-10-28  Paolo Borelli  <pborelli@katamail.com>
 
+	* src/baobab-scan.c: use 512, not io_block_size.
+
+2006-10-28  Paolo Borelli  <pborelli@katamail.com>
+
 	* src/baobab-scan.c:
 	* src/baobab-scan.h:
 
